# cicd-mlops-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.in  dvc.yaml  model.dvc  params.yaml  pyproject.toml  report.md  requirements.in  requirements.txt  scaler.dvc  svm-app.mlem  svm-app.mlem.state
.dvc/: config
.github/workflows/: publish.yaml  run_test.yaml
conf/: config.yaml
conf/segment/: KMeans.yaml
data/: intermediate.dvc  raw.dvc
dvc_plots/: index.html
dvclive/: .gitignore  dvc.yaml  params.yaml  report.html
dvclive/plots/metrics/: accuracy.tsv  mean_accuracy.tsv  silhouette_score.tsv
model/: .gitignore  svm.mlem
scaler/: standard_scaler.pkl
src/: README.md  evaluate.py  helper.py  process_data.py  requirements.txt  segment.py  test.py  train.py
src/charts/: feature_profiles_for_load_training_data.py  most_frequent_values_for_load_training_data.py  pie_chart_for_load_training_labels_1680728104206.py  summary_overview_for_load_training_data.py  unique_values_for_load_training_data.py
src/data_exporters/: save_best_hyperparameters.py
src/data_loaders/: load_training_data.py  load_training_labels.py
src/pipelines/train_model/: metadata.yaml
src/transformers/: train_and_save_model.py
tests/: conftest.py  test_model.py  test_process_data.py  test_segment.py  test_train.py
